small CSS change to avoid modernized theme horizontal scroll bar on narrow windows

--- a/MoinMoin/themes/modernized/static/css/stylus/theme.styl
+++ b/MoinMoin/themes/modernized/static/css/stylus/theme.styl
@@ -811,6 +811,12 @@ body
 .moin-suggestions
     padding-left 14px
 
+@media (max-width: 820px)
+    #moin-main-wrapper
+        width:100%;
+        min-width: 0;
+        overflow: auto;
+
 @media print
     html
         font-family serif
